--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,17 @@
 version: 0.2
+
 phases:
+  install:
+    runtime-versions:
+      java: corretto17
   build:
     commands:
       - echo Packaging JAR file...
-      - mvn clean package
+      - mvn clean package -DskipTests
   post_build:
     commands:
       - echo Build complete.
+
 artifacts:
   files:
     - target/AWS_Deploy-0.0.1-SNAPSHOT.jar
